--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.2.5",
+    "nodemailer": "6.6.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sequelize": "^6.6.2"
