--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nodemailer": "6.6.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
